--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-image-appear": "^1.2.23",
     "react-scripts": "3.4.0",
     "react-test-renderer": "^16.13.1",
     "styled-components": "^5.1.0"
